--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
       <li><a href="#" class="hover:text-blue-500">Home</a></li>
       <li><a href="#" class="hover:text-blue-500">Events</a></li>
       <li><a href="#" class="hover:text-blue-500">About</a></li>
-      <li><a href="#" class="hover:text-blue-500">Contact</a></li>
+      <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
     </ul>
   </nav>
 
