--- a/login.html
+++ b/login.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log-in page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | College Event Planner</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form action="" id="loginForm">
-            <input type="text" id="username" placeholder="Username" required />
-            <input type="password" id="password" placeholder="Password" required />
-            <button type="submit">Login</button>
-      <p id="error" class="error-message"></p>
-        </form>
-    </div>
+<body class="bg-blue-50 flex items-center justify-center h-screen">
+
+  <!-- Login Card -->
+  <div class="bg-white shadow-xl rounded-xl p-8 w-full max-w-md">
+    <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Login</h2>
+
+    <form action="#" method="POST" class="space-y-5">
+      <!-- Email -->
+      <div>
+        <label class="block mb-1 font-medium text-gray-700">Email</label>
+        <input type="email" name="email" placeholder="you@example.com" required
+               class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+
+      <!-- Password -->
+      <div>
+        <label class="block mb-1 font-medium text-gray-700">Password</label>
+        <input type="password" name="password" placeholder="••••••••" required
+               class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
+
+      <!-- Submit Button -->
+      <button type="submit"
+              class="w-full bg-blue-600 text-white font-semibold py-3 rounded-lg hover:bg-blue-700 transition">
+        Sign In
+      </button>
+    </form>
+
+    <!-- Extra Links -->
+    <p class="text-sm text-center text-gray-500 mt-6">
+      Don't have an account?
+      <a href="sign_in.html" class="text-blue-600 hover:underline">Register here</a>
+    </p>
+  </div>
+
 </body>
 </html>
