--- a/home.html
+++ b/home.html
@@ -12,9 +12,9 @@
   <nav class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-blue-600">College Events</h1>
     <ul class="flex space-x-6">
-      <li><a href="#" class="hover:text-blue-500">Home</a></li>
-      <li><a href="#" class="hover:text-blue-500">Events</a></li>
-      <li><a href="#" class="hover:text-blue-500">About</a></li>
+      <li><a href="#" class="text-blue-500 font-semibold">Home</a></li>
+      <li><a href="events.html" class="hover:text-blue-500">Events</a></li>
+      <li><a href="about.html" class="hover:text-blue-500">About</a></li>
       <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
     </ul>
   </nav>
