--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login | College Event Planner</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -13,6 +13,18 @@
     <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Login</h2>
 
     <form action="#" method="POST" class="space-y-5">
+
+      <!-- Role Selection -->
+      <div>
+        <label class="block mb-1 font-medium text-gray-700">Login As</label>
+        <select name="role" required
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <option value="">Select Role</option>
+          <option value="organizer">Organizer</option>
+          <option value="management">Management</option>
+        </select>
+      </div>
+
       <!-- Email -->
       <div>
         <label class="block mb-1 font-medium text-gray-700">Email</label>
