feedback and profile is added

--- a/home.html
+++ b/home.html
@@ -10,14 +10,24 @@
 
   <!-- Navbar -->
   <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-blue-600">College Events</h1>
+  <h1 class="text-2xl font-bold text-blue-600">College Events</h1>
+
+  <div class="flex items-center space-x-6">
     <ul class="flex space-x-6">
       <li><a href="#" class="text-blue-500 font-semibold">Home</a></li>
       <li><a href="events.html" class="hover:text-blue-500">Events</a></li>
       <li><a href="about.html" class="hover:text-blue-500">About</a></li>
       <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
     </ul>
-  </nav>
+
+    <!-- Profile Image -->
+    <a href="profile.html">
+      <img src="https://via.placeholder.com/40" alt="Profile"
+           class="w-10 h-10 rounded-full border-2 border-blue-400 hover:scale-105 transition-transform">
+    </a>
+  </div>
+</nav>
+
 
   <!-- Hero Section -->
   <section class="text-center py-20 bg-blue-100">
