updated events home and added payment history

--- a/event-management.html
+++ b/event-management.html
@@ -27,7 +27,7 @@
       <ul class="space-y-4 text-blue-700 font-medium">
         <li><a href="event-creation.html" class="hover:underline">Create Event</a></li>
         <li><a href="event-management.html" class="font-bold underline">Manage Events</a></li>
-        <li><a href="event-registrations.html" class="hover:underline">Event Registrations</a></li>
+        <li><a href="event-registration.html" class="hover:underline">Event Registrations</a></li>
       </ul>
     </aside>
 
