--- a/events.html
+++ b/events.html
@@ -28,6 +28,7 @@
         <li><a href="event-creation.html" class="hover:underline">➤ Event Creation</a></li>
         <li><a href="event-management.html" class="hover:underline">➤ Event Management</a></li>
         <li><a href="event-registration.html" class="hover:underline">➤ Event Registration</a></li>
+        <li><a href="payment-history.html" class="hover:underline">➤ Payment History</a></li>
       </ul>
     </aside>
 
