--- a/home.html
+++ b/home.html
@@ -5,29 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>College Event Planner</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Toggle notification dropdown
+    function toggleNotifications() {
+      const dropdown = document.getElementById('notificationDropdown');
+      dropdown.classList.toggle('hidden');
+    }
+  </script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
   <!-- Navbar -->
   <nav class="bg-white shadow p-4 flex justify-between items-center">
-  <h1 class="text-2xl font-bold text-blue-600">College Events</h1>
+    <h1 class="text-2xl font-bold text-blue-600">College Events</h1>
 
-  <div class="flex items-center space-x-6">
-    <ul class="flex space-x-6">
-      <li><a href="#" class="text-blue-500 font-semibold">Home</a></li>
-      <li><a href="events.html" class="hover:text-blue-500">Events</a></li>
-      <li><a href="about.html" class="hover:text-blue-500">About</a></li>
-      <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
-    </ul>
+    <div class="flex items-center space-x-6">
+      <ul class="flex space-x-6">
+        <li><a href="#" class="text-blue-500 font-semibold">Home</a></li>
+        <li><a href="events.html" class="hover:text-blue-500">Events</a></li>
+        <li><a href="about.html" class="hover:text-blue-500">About</a></li>
+        <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
+      </ul>
 
-    <!-- Profile Image -->
-    <a href="profile.html">
-      <img src="https://via.placeholder.com/40" alt="Profile"
-           class="w-10 h-10 rounded-full border-2 border-blue-400 hover:scale-105 transition-transform">
-    </a>
-  </div>
-</nav>
+      <!-- Notification Icon -->
+      <div class="relative">
+        <button onclick="toggleNotifications()" class="relative">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-600 hover:text-blue-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15 17h5l-1.405-1.405C18.79 14.79 18 13.4 18 12V8a6 6 0 10-12 0v4c0 1.4-.79 2.79-1.595 3.595L3 17h5m4 0v1a3 3 0 006 0v-1m-6 0h6" />
+          </svg>
+          <span class="absolute -top-2 -right-2 bg-red-500 text-white text-xs rounded-full w-4 h-4 flex items-center justify-center">3</span>
+        </button>
 
+        <!-- Notification Dropdown -->
+        <div id="notificationDropdown" class="hidden absolute right-0 mt-2 w-64 bg-white border border-gray-200 rounded-lg shadow-lg z-50">
+          <div class="p-4 text-sm text-gray-700">
+            <p class="font-semibold mb-2">Notifications</p>
+            <ul class="space-y-2 max-h-60 overflow-y-auto">
+              <li class="border-b pb-2">🎉 You’ve been approved for Tech Fest 2025.</li>
+              <li class="border-b pb-2">📅 Entrepreneurship Summit starts tomorrow!</li>
+              <li class="pb-2">📝 New event "AI Seminar" added by CSE Dept.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Profile Image -->
+      <a href="profile.html">
+        <img src="https://via.placeholder.com/40" alt="Profile"
+          class="w-10 h-10 rounded-full border-2 border-blue-400 hover:scale-105 transition-transform">
+      </a>
+    </div>
+  </nav>
 
   <!-- Hero Section -->
   <section class="text-center py-20 bg-blue-100">
