--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,31 +15,31 @@
     <ul class="flex space-x-6">
       <li><a href="home.html" class="hover:text-blue-500">Home</a></li>
       <li><a href="events.html" class="hover:text-blue-500">Events</a></li>
-            <li><a href="#" class="text-blue-500 font-semibold">About</a></li>
+      <li><a href="#" class="text-blue-500 font-semibold">About</a></li>
       <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
-
     </ul>
   </nav>
 
   <!-- About Section -->
-  <section class="max-w-5xl mx-auto px-6 py-20">
-    <h2 class="text-4xl font-bold text-center mb-6">About Us</h2>
-    <p class="text-lg text-gray-600 text-center mb-12">
+  <section class="max-w-3xl mx-auto px-6 py-20 text-center">
+    <h2 class="text-4xl font-bold mb-6">About Us</h2>
+    <p class="text-lg text-gray-600 mb-12">
       The College Event Planner is your go-to platform for organizing and discovering campus events.
       Whether it's a tech symposium, cultural fest, workshop, or guest lecture – we've got you covered.
     </p>
 
-    <div class="grid md:grid-cols-2 gap-10 items-center">
-      <img src="https://source.unsplash.com/600x400/?college,event" alt="College Event" class="rounded-xl shadow-md" />
-      
-      <div class="space-y-5">
+    <div class="space-y-10">
+      <div>
         <h3 class="text-2xl font-semibold text-blue-600">Our Mission</h3>
-        <p>
-          We aim to simplify the way students, faculty, and clubs communicate and manage events. With a streamlined interface and powerful tools, we make event planning hassle-free.
+        <p class="mt-3 text-gray-700">
+          We aim to simplify the way students, faculty, and clubs communicate and manage events.
+          With a streamlined interface and powerful tools, we make event planning hassle-free.
         </p>
+      </div>
 
-        <h3 class="text-2xl font-semibold text-blue-600 mt-6">Why Use Us?</h3>
-        <ul class="list-disc list-inside text-gray-700">
+      <div>
+        <h3 class="text-2xl font-semibold text-blue-600">Why Use Us?</h3>
+        <ul class="list-disc list-inside text-gray-700 mt-3 text-left max-w-md mx-auto">
           <li>Centralized platform for all college events</li>
           <li>Easy event creation and registration</li>
           <li>Real-time updates and reminders</li>
@@ -52,6 +53,13 @@
   <footer class="bg-gray-200 text-center p-4 text-sm text-gray-600">
     © 2025 College Event Planner. All rights reserved.
   </footer>
+  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="about.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="about.js"></script>
 
 </body>
 </html>
