--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,6 +51,9 @@
   <footer class="bg-gray-200 text-center p-4 mt-12 text-sm text-gray-600">
     © 2025 College Event Planner. All rights reserved.
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="contact.js"></script>
+
 
 </body>
 </html>
