--- a/event-management.html
+++ b/event-management.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
+
+    <script>
+  if (localStorage.getItem("userRole") !== "student") {
+    alert("Access Denied! Please access this page from the Home page.");
+    window.location.href = "home.html";
+  }
+</script>
+
 
   <!-- Top Nav -->
   <nav class="bg-white shadow p-4 flex justify-between items-center">
@@ -27,7 +36,7 @@
       <ul class="space-y-4 text-blue-700 font-medium">
         <li><a href="event-creation.html" class="hover:underline">Create Event</a></li>
         <li><a href="event-management.html" class="font-bold underline">Manage Events</a></li>
-        <li><a href="event-registration.html" class="hover:underline">Event Registrations</a></li>
+        <li><a href="event-registrations.html" class="hover:underline">Event Registrations</a></li>
       </ul>
     </aside>
 
@@ -81,6 +90,8 @@
   <footer class="bg-gray-200 text-center p-4 text-sm text-gray-600 mt-10">
     © 2025 College Event Planner. All rights reserved.
   </footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="event-management.js"></script>
 
 </body>
 </html>
