--- a/event-registration.html
+++ b/event-registration.html
@@ -35,50 +35,9 @@
     <main class="flex-1 p-6 md:p-8">
       <h2 class="text-2xl font-bold text-gray-800 mb-6">Event Registrations</h2>
 
-      <!-- Registrations Table -->
-      <div class="bg-white rounded-lg shadow overflow-x-auto">
-        <table class="min-w-full text-left">
-          <thead class="bg-gray-200 text-gray-600 uppercase text-sm">
-            <tr>
-              <th class="py-3 px-6">Name</th>
-              <th class="py-3 px-6">Email</th>
-              <th class="py-3 px-6">Event</th>
-              <th class="py-3 px-6">Price</th>
-              <th class="py-3 px-6">Date Registered</th>
-              <th class="py-3 px-6">Actions</th>
-            </tr>
-          </thead>
-          <tbody class="text-gray-700">
-            <tr class="border-b">
-              <td class="py-4 px-6">Alice Johnson</td>
-              <td class="py-4 px-6">alice@example.com</td>
-              <td class="py-4 px-6">AI Workshop</td>
-              <td class="py-4 px-6">₹150</td>
-              <td class="py-4 px-6">July 15, 2025</td>
-              <td class="py-4 px-6">
-                <div class="flex flex-col sm:flex-row sm:space-x-3 space-y-2 sm:space-y-0">
-                  <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full sm:w-auto">Accept</button>
-                  <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 w-full sm:w-auto">Decline</button>
-                </div>
-              </td>
-            </tr>
-            <tr class="border-b">
-              <td class="py-4 px-6">Ravi Kumar</td>
-              <td class="py-4 px-6">ravi.kumar@example.com</td>
-              <td class="py-4 px-6">Cultural Fest</td>
-              <td class="py-4 px-6">₹100</td>
-              <td class="py-4 px-6">Aug 1, 2025</td>
-              <td class="py-4 px-6">
-                <div class="flex flex-col sm:flex-row sm:space-x-3 space-y-2 sm:space-y-0">
-                  <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full sm:w-auto">Accept</button>
-                  <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 w-full sm:w-auto">Decline</button>
-                </div>
-              </td>
-            </tr>
-            <!-- Add more rows as needed -->
-          </tbody>
-        </table>
-      </div>
+      <!--  Only Keep This -->
+      <div id="studentList" class="mt-4"></div>
+
     </main>
   </div>
 
@@ -87,5 +46,7 @@
     © 2025 College Event Planner. All rights reserved.
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="event-registration.js"></script>
 </body>
 </html>
