--- a/events.html
+++ b/events.html
@@ -36,34 +36,40 @@
     <main class="flex-1 px-6 py-10">
       <section class="max-w-6xl mx-auto">
         <h2 class="text-3xl font-bold text-center mb-6">Explore Campus Events</h2>
-        <p class="text-center text-gray-600 mb-10">
+        <p class="text-center text-gray-600 mb-6">
           From tech talks to cultural fests, find all upcoming and past events here.
         </p>
 
+        <!-- Search Box -->
+        <input type="text" id="searchEvent" placeholder="Search events..."
+          class="block mx-auto mb-10 px-4 py-2 border rounded-lg w-full max-w-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400">
+
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-          <!-- Event Card Example -->
-          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+          <!-- Event Card 1 -->
+          <div class="event-card bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
             <h3 class="text-xl font-semibold text-blue-600 mb-2">AI Workshop</h3>
             <p class="text-gray-700 mb-3">Learn about the future of AI with hands-on sessions and expert talks.</p>
-            <p class="text-sm text-gray-500 mb-1">📅 Date: July 22, 2025</p>
+            <p class="event-date text-sm text-gray-500 mb-1">📅 Date: July 22, 2025</p>
             <p class="text-sm text-gray-500 mb-4">📍 Venue: Seminar Hall A</p>
-            <a href="event-details.html" class="text-blue-600 hover:underline">View Details →</a>
+            <button class="register-btn bg-blue-600 text-white px-4 py-2 mt-3 rounded hover:bg-blue-700 transition">Register</button>
           </div>
 
-          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+          <!-- Event Card 2 -->
+          <div class="event-card bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
             <h3 class="text-xl font-semibold text-blue-600 mb-2">Cultural Fest</h3>
             <p class="text-gray-700 mb-3">Dance, music, drama, and more. Join the celebration!</p>
-            <p class="text-sm text-gray-500 mb-1">📅 Date: August 12, 2025</p>
+            <p class="event-date text-sm text-gray-500 mb-1">📅 Date: August 12, 2025</p>
             <p class="text-sm text-gray-500 mb-4">📍 Venue: Main Auditorium</p>
-            <a href="event-details.html" class="text-blue-600 hover:underline">View Details →</a>
+            <button class="register-btn bg-blue-600 text-white px-4 py-2 mt-3 rounded hover:bg-blue-700 transition">Register</button>
           </div>
 
-          <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
+          <!-- Event Card 3 -->
+          <div class="event-card bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
             <h3 class="text-xl font-semibold text-blue-600 mb-2">Tech Symposium</h3>
             <p class="text-gray-700 mb-3">A platform to present your projects and compete in coding challenges.</p>
-            <p class="text-sm text-gray-500 mb-1">📅 Date: September 5, 2025</p>
+            <p class="event-date text-sm text-gray-500 mb-1">📅 Date: September 5, 2025</p>
             <p class="text-sm text-gray-500 mb-4">📍 Venue: CS Block</p>
-            <a href="event-details.html" class="text-blue-600 hover:underline">View Details →</a>
+            <button class="register-btn bg-blue-600 text-white px-4 py-2 mt-3 rounded hover:bg-blue-700 transition">Register</button>
           </div>
         </div>
       </section>
@@ -74,6 +80,10 @@
   <footer class="bg-gray-200 text-center p-4 text-sm text-gray-600">
     © 2025 College Event Planner. All rights reserved.
   </footer>
+
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="events.js"></script>
 
 </body>
 </html>
