--- a/feedback-page.html
+++ b/feedback-page.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,6 +76,8 @@
   <footer class="bg-gray-200 text-center p-4 text-sm text-gray-600 mt-10">
     © 2025 College Event Planner. All rights reserved.
   </footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="feedback.js"></script>
 
 </body>
 </html>
