--- a/login.html
+++ b/login.html
@@ -12,7 +12,14 @@
   <div class="bg-white shadow-xl rounded-xl p-8 w-full max-w-md">
     <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Login</h2>
 
-    <form action="#" method="POST" class="space-y-5">
+    <form id="loginForm" class="space-y-5">
+
+      <!-- Username -->
+      <div>
+        <label class="block mb-1 font-medium text-gray-700">Name</label>
+        <input type="text" name="username" placeholder="Your Name" required
+               class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+      </div>
 
       <!-- Role Selection -->
       <div>
@@ -20,8 +27,8 @@
         <select name="role" required
                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
           <option value="">Select Role</option>
-          <option value="organizer">Organizer</option>
-          <option value="management">Management</option>
+          <option value="admin">admin</option>
+          <option value="student">student</option>
         </select>
       </div>
 
@@ -37,6 +44,7 @@
         <label class="block mb-1 font-medium text-gray-700">Password</label>
         <input type="password" name="password" placeholder="••••••••" required
                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <p class="text-xs text-gray-500 mt-1">Min 8 chars, 1 uppercase, 1 lowercase, 1 number</p>
       </div>
 
       <!-- Submit Button -->
@@ -49,9 +57,11 @@
     <!-- Extra Links -->
     <p class="text-sm text-center text-gray-500 mt-6">
       Don't have an account?
-      <a href="sign_in.html" class="text-blue-600 hover:underline">Register here</a>
+      <a href="home.html" class="text-blue-600 hover:underline">Register here</a>
     </p>
   </div>
 
+  <!-- Link to External JS -->
+  <script src="login.js"></script>
 </body>
 </html>
