--- a/payment.html
+++ b/payment.html
@@ -75,6 +75,8 @@
   <footer class="bg-gray-200 text-center p-4 text-sm text-gray-600 mt-10">
     © 2025 College Event Planner. All rights reserved.
   </footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="payment.js"></script>
 
 </body>
 </html>
