--- a/sign_in.html
+++ b/sign_in.html
@@ -54,6 +54,10 @@
       <a href="login.html" class="text-blue-600 hover:underline">Login here</a>
     </p>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="signup.js"></script>
+</body>
+
 
 </body>
 </html>
