event-management.html

--- a/event-management.html
+++ b/event-management.html
@@ -1,97 +1,9 @@
+$(document).ready(function () {
+  const userData = JSON.parse(localStorage.getItem("loggedInUser"));
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Event Management | College Event Planner</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 text-gray-800">
-
-    <script>
-  if (localStorage.getItem("userRole") !== "student") {
-    alert("Access Denied! Please access this page from the Home page.");
-    window.location.href = "home.html";
+  // Allow only admin users to access this page
+  if (!userData || !userData.role || userData.role.toLowerCase() !== "admin") {
+    alert("Access denied! Only admins can access this page.");
+    window.location.href = "login.html"; // Redirect to login
   }
-</script>
-
-
-  <!-- Top Nav -->
-  <nav class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-blue-600">College Event Planner</h1>
-    <ul class="flex space-x-6">
-      <li><a href="home.html" class="hover:text-blue-500">Home</a></li>
-      <li><a href="events.html" class="hover:text-blue-500">Events</a></li>
-      <li><a href="about.html" class="hover:text-blue-500">About</a></li>
-      <li><a href="contact.html" class="hover:text-blue-500">Contact</a></li>
-    </ul>
-  </nav>
-
-  <div class="flex min-h-screen">
-    
-    <!-- Sidebar -->
-    <aside class="w-64 bg-blue-100 p-6">
-      <h2 class="text-xl font-semibold mb-6 text-blue-700">Event Tools</h2>
-      <ul class="space-y-4 text-blue-700 font-medium">
-        <li><a href="event-creation.html" class="hover:underline">Create Event</a></li>
-        <li><a href="event-management.html" class="font-bold underline">Manage Events</a></li>
-        <li><a href="event-registrations.html" class="hover:underline">Event Registrations</a></li>
-      </ul>
-    </aside>
-
-    <!-- Main Content -->
-    <main class="flex-1 p-8">
-      <div class="flex justify-between items-center mb-6">
-        <h2 class="text-2xl font-bold text-gray-800">Manage Events</h2>
-        <a href="event-creation.html" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
-          + Add New Event
-        </a>
-      </div>
-
-      <!-- Events Table -->
-      <div class="bg-white rounded-lg shadow overflow-x-auto">
-        <table class="min-w-full text-left">
-          <thead class="bg-gray-200 text-gray-600 uppercase text-sm">
-            <tr>
-              <th class="py-3 px-6">Event Name</th>
-              <th class="py-3 px-6">Date</th>
-              <th class="py-3 px-6">Venue</th>
-              <th class="py-3 px-6">Actions</th>
-            </tr>
-          </thead>
-          <tbody class="text-gray-700">
-            <tr class="border-b">
-              <td class="py-4 px-6">AI Workshop</td>
-              <td class="py-4 px-6">July 22, 2025</td>
-              <td class="py-4 px-6">Seminar Hall A</td>
-              <td class="py-4 px-6 space-x-4">
-                <a href="#" class="text-blue-600 hover:underline">Edit</a>
-                <a href="#" class="text-red-600 hover:underline">Delete</a>
-              </td>
-            </tr>
-            <tr class="border-b">
-              <td class="py-4 px-6">Cultural Fest</td>
-              <td class="py-4 px-6">Aug 12, 2025</td>
-              <td class="py-4 px-6">Main Auditorium</td>
-              <td class="py-4 px-6 space-x-4">
-                <a href="#" class="text-blue-600 hover:underline">Edit</a>
-                <a href="#" class="text-red-600 hover:underline">Delete</a>
-              </td>
-            </tr>
-            <!-- Add more rows as needed -->
-          </tbody>
-        </table>
-      </div>
-    </main>
-  </div>
-
-  <!-- Footer -->
-  <footer class="bg-gray-200 text-center p-4 text-sm text-gray-600 mt-10">
-    © 2025 College Event Planner. All rights reserved.
-  </footer>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="event-management.js"></script>
-
-</body>
-</html>
+});
